src/components/list/components/listItem/styles.module.scss
// .containerChecked {
//   filter: brightness(0.75);

//   .infoTitle {
//     text-decoration: line-through;
//   }
// }

.container {
  background-color: vars.$color-surface;
  border-radius: vars.$roundness;
  // overflow: hidden;

  .imageContainer {
  }

  .containerContent {
    flex-direction: row;
    flex: 1;

    .imageContainer {
      height: 150px;
      aspect-ratio: 0.7;

      .image {
        position: absolute;
        height: 100%;
        width: 100%;
      }
    }

    .content {
      flex: 1;
      flex-direction: row;
      padding-block: vars.$spacing-secondary;
      padding-inline: vars.$spacing-primary;
      align-items: center;

      .info {
        flex: 1;

        .infoTitle {
          font-size: vars.$font-size-heading2;
        }

        .infoSub {
          color: vars.$color-text-secondary;
        }

        .infoRating {
          font-size: vars.$font-size-heading2;
          border: 2px solid vars.$color-surface2;
          width: fit-content;
          padding-inline: vars.$spacing-primary;
          border-radius: vars.$roundness;
          margin-top: auto;
          margin-bottom: vars.$spacing-tertiary;
        }
      }

      .date {
        border-radius: vars.$roundness;
        margin-left: auto;
        padding-inline: vars.$spacing-secondary;
      }
    }
  }
}

.containerFull {
  @extend .container;
  flex-direction: row;
  align-items: center;
  cursor: pointer;
}

.containerCompact {
  // @extend .container;
  background-color: vars.$color-surface;
  display: grid;
  cursor: pointer;
  aspect-ratio: 0.5;
  overflow: hidden;
  border-radius: vars.$roundness;

  &:hover {
    scale: 1.03;
    transition: scale 0.15s ease-in-out;
  }

  .imageContainer {
    position: absolute;
    height: 100%;
    width: 100%;

    .image {
      background-color: grey;
      object-fit: fill;
      height: 100%;
      width: 100%;
      position: absolute;
    }
  }

  // .infoRating {
  //   position: absolute;
  //   top: vars.$spacing-tertiary;
  //   right: vars.$spacing-tertiary;
  //   background-color: vars.$color-background-translucent;
  //   padding-block: calc(vars.$spacing-tertiary / 2);
  //   padding-inline: vars.$spacing-secondary;
  //   border-radius: vars.$roundness;
  // }
}

.input {
  padding-block: vars.$spacing-primary * 2 !important;
}

